--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^3.0.4",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
