--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
@@ -37,6 +38,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28",
     "webpack": "^4.44.2"
